--- a/404.html
+++ b/404.html
@@ -1,1 +1,1 @@
-window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ");
