--- a/404.html
+++ b/404.html
@@ -1,1 +1,3 @@
-window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ");
+<script>
+	window.location.replace('https://www.youtube.com/watch?v=dQw4w9WgXcQ');
+</script>
