--- a/your-cat.html
+++ b/your-cat.html
@@ -45,7 +45,7 @@
         </div>
         <div class="cat-description">
           <label id="color-label" for="color">What color is your cat? (Click the box below to pick.)</label><input id="color" name="catColor" type="color" value="#F6D1D7">
-          <label id="cat-desc-label" for="catDescription">What does your cat look like?</label>
+          <label id="cat-desc-label" for="catDescription">Describe your cat's appearance.</label>
           <textarea class="textbox" type="textarea" name="catDescription"></textarea>
         </div>
         <div class="story">
